--- a/index.html
+++ b/index.html
@@ -4,8 +4,110 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Allen Portofolio Web</title>
-    <link rel="stylesheet" href="/style.css">
 </head>
+    <style>
+        body {
+    background-color: #ffffff;
+}
+
+h1 {
+    color: #006BFF;
+}
+
+header {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    text-align: center;
+    background-color: #BCF2F6;
+    border-radius: 40px 0 40px 0;
+
+}
+
+img {
+    margin-bottom: 20px;
+    width: 30%;
+    border-radius: 50%;
+    border: 5px solid #FFF100;
+}
+
+img:hover {
+    transform: scale(.8);
+    transition: all .3s ease-in-out;
+}
+
+
+header button {
+    padding: 8px 20px;
+    background-color: #FFF100;
+    border: 1px solid #006BFF;
+    display: block;
+    margin:0 auto;
+    border-radius: 20px;
+}
+
+header button:hover {
+    background-color: #006BFF;
+    color: #FFF100;
+    border-radius: 20px;
+    transform: scale(.9);
+    transition: all .3s ease-in-out;
+}
+.about {
+    width: 90%;
+    margin: 40px auto;
+    display: flex;
+}
+.left-about img {
+    width: 60%;
+    border-radius: 30px;
+    box-shadow: 2px 2px 10px grey;
+}
+.right-about h2 {
+    color: #006BFF;
+}
+#products {
+    width: 95%;
+    text-align: center;
+    margin: 40px;
+}
+#product h2 {
+    color: darkorchid;
+}
+.cards {
+    border: 3px dashed darkorchid;
+    padding: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+.card {
+    width: 350px;
+    border: 1px solid yellow;
+}
+main {
+    background-color: black;
+}
+.card img {
+    border-radius: 0;
+    width: 100%;
+}
+.card h3 {
+    color: beige;   
+}
+.card a button {
+    margin-bottom: 20px;
+    background-color: darkorchid;
+    padding: 8px 25px;
+}
+.card p {
+    color: beige;   
+}
+.footer {
+    background-color: black;
+    color: #ffffff;
+
+}
+    </style>
 <body>
    
     <header>
